iter_language/tests/corpus/invalid/sandbox-without-network.iter
workspace sandbox {
  base = "."
  excludes = []
  preserve_mtime = true
  apply_back { mode = sync }  policy {
  }
}
runner { continue_on_error = false  behavior = wait }
